--- a/smart-vocab/package.json
+++ b/smart-vocab/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/button": "2.2.19",
+    "@heroui/card": "^2.2.18",
     "@heroui/code": "2.2.14",
     "@heroui/input": "2.4.19",
     "@heroui/kbd": "2.2.15",
@@ -20,13 +21,18 @@
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
     "@heroui/theme": "2.4.15",
+    "@prisma/client": "^6.8.2",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "next-themes": "0.4.6",
+    "prisma": "^6.8.2",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
